--- a/bundles/org.eclipse.platform.doc.user/concepts/cdecorations.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cdecorations.htm
@@ -21,13 +21,13 @@ This preference page provides a selectable list and description of the available
 decorations.</P>
 <P CLASS="Para">The following is the Navigator view showing resources with CVS
 decorations:</P>
-<P CLASS="Para">&nbsp;</P>
+<P CLASS="Para"><img border="0" src="../images/Image273_nav-decorators.jpg" alt="Navigator view with CVS decorators on" width="264" height="259"></P>
 <P CLASS="Para">&nbsp;</P>
 <P CLASS="Para"><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
 </P>
 
 <p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
 </p>
 
 
