--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24c.htm
@@ -119,7 +119,7 @@ Click Finish when you are done.</P>
 Importing files</a><P><a href="qs-24b.htm">
 <img border="0" src="../images/ngback.gif" alt="Back to previous topic" > 
 Drag and drop or copy and paste</a><br>
-<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a>
+<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a>
 
 </P>
 
