--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35.htm
@@ -84,7 +84,7 @@ setup:</P>
 Copying</a><p><a href="qs-34d.htm">
 <img border="0" src="../images/ngback.gif" alt="Back to previous topic" > 
 Editing files outside the workbench</a><br>
-<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a>
+<P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a>
 
 </p>
 
