--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36a.htm
@@ -144,7 +144,7 @@ section we will learn how to work with the Search view.
 The Search view</a><p><a href="qs-36.htm">
 <img border="0" src="../images/ngback.gif" alt="Back to previous topic" > 
 Searching</a><br>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a>
 </p>
 
 
