--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39c.htm
@@ -86,7 +86,7 @@ Rearranging views and editors</a></P>
 
 
 <P>
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a>
 
 </P>
 
