--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
@@ -121,7 +121,7 @@ change to deal with.</p>
 </TBODY>
 </TABLE>
 <P>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a>
+<a href="../../hglegal2002.htm"><img src="../../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a></a>
 </P>
 
 
