--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52e.htm
@@ -123,7 +123,7 @@ Understanding the comparison</a></P>
 
 
 <P>
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a>
 
 </P>
 
