Fixed html errors

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-30.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-30.htm
@@ -64,10 +64,7 @@ Updating</a><a href="../tasks/tasks-113b.htm"><br>
   Merging from a branch</a><a href="../tasks/tasks-114.htm"><br>
 Committing</a> </p>
      
-<a href="../hglegal2002.htm"><img
- src="../images/ngibmcpy2002.gif"
- alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved."
- border="0" width="324" height="14">
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
      
 </body>
