--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-7.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-7.htm
@@ -20,7 +20,7 @@ menu bar and toolbar of a perspective.</P>
 <a href="../hglegal2002.htm"><img
  src="../images/ngibmcpy2002.gif"
  alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved."
- border="0" width="324" height="14">
+ border="0" width="324" height="14"></a>
 
 </P>
 
