Updated image for Team programming with CVS

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-26.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-26.htm
@@ -49,7 +49,7 @@ changing, moving forward as team members submit      new work.</p>
          
 <div class="Figure">        
 <div> <img src="../images/ref-9.gif"
- alt="Interaction with Streams and Workbenches" width="344" height="183">
+ alt="Interaction with Branches and Workbenches" width="344" height="183">
         </div>
       </div>
          
