--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-20.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-20.htm
@@ -1,1 +1,93 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Changing fonts and colors</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Changing fonts and colors</H1><p>By default, the Workbench uses the fonts and colors provided by the operating system. However, there are a number of ways that this behavior can be customized.</p><h2>Fonts</h2><p>The Workbench lets you directly configure three fonts:</p><dl>  <dt><em>Banner Font</em></dt>  <dd>used in PDE editors, welcome pages and in the title area of    many wizards. For instance the New Project wizard uses this font for the top    title,</dd>  <dt><em>Header Font</em></dt>  <dd>used as a section heading. For instance the    Welcome page for the Eclipse Platform uses this font for the top title,</dd>  <dt><em>Text Font</em></dt>  <dd>used in text editors.</dd></dl><p>You can change these fonts as follows:</p><ol>  <li>On the main menu bar, click <b>Window &gt; Preferences</b>.</li>  <li>Expand the <b>Workbench</b> category and select <b>Fonts</b>.</li>  <li>Select the font you want to change.</li>  <li>Click the <b>Change</b> push button.</li>  <li>Use the dialog which opens to select a font.</li>  <li>Click <b>OK</b>.</li></ol><p>Note: You can also click the <b>Use System Font</b> button to set the font   to a reasonable value chosen by the platform. For example, on Windows this will   use the font selected in the Display Properties control panel.</p><p>Plugins which use other fonts may also provide preference entries to allow them tobe customized. For example, the Java Development Tools provide a setting for controllingthe font used by the Java editor (<b>Java &gt; Editor &gt; Appearance &gt; Text font</b>).</p><p>In addition to the above, some text is always displayed in the system font. For example, the navigator tree always does this. To change the font used in these areas, you can use theconfiguration tools provided by the system (eg. the Display Properties control panel onWindows, or the .Xdefaults file in Motif).</p><h2>Colors</h2><p>To set the colors used by the Workbench to display error text and hyperlink text:</p><ol>  <li>On the main menu bar, click <b>Window &gt; Preferences</b>.</li>  <li>Expand the <b>Workbench</b> category and select <b>Appearance</b>.</li>  <li>Select the color you want to change.</li>  <li>Use the dialog which opens to select a color.</li>  <li>Click <b>OK</b>.</li></ol><p>Plugins which use other colors may also provide preference entries to allow them tobe customized. For example, the searching support provides a setting for controllingthe color used to display inexact matches (<b>Workbench &gt; Search &gt; Foregroundcolor for inexact matches</b>).</p><p>In general, the Workbench uses the colors that are chosen by the operating   system. To change these colors you can use the configuration tools provided   by the system (eg. the Display Properties control panel on Windows, or the .Xdefaults   file in Motif). </p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/accessibility/fontsandcolors.htm">Fonts and Colors in Eclipse</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Changing fonts and colors</title>
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1>Changing fonts and colors</H1>
+
+<p>By default, the Workbench uses the fonts and colors provided by the operating 
+system. However, there are a number of ways that this behavior can be customized.
+</p>
+
+<h2>Fonts</h2>
+
+<p>The Workbench lets you directly configure three fonts:
+</p>
+
+<dl>
+  <dt><em>Banner Font</em></dt>
+  <dd>used in PDE editors, welcome pages and in the title area of
+    many wizards. For instance the New Project wizard uses this font for the top
+    title,</dd>
+  <dt><em>Header Font</em></dt>
+  <dd>used as a section heading. For instance the
+    Welcome page for the Eclipse Platform uses this font for the top title,</dd>
+  <dt><em>Text Font</em></dt>
+  <dd>used in text editors.</dd>
+</dl>
+
+<p>You can change these fonts as follows:
+</p>
+
+<ol>
+  <li>On the main menu bar, click <b>Window &gt; Preferences</b>.</li>
+  <li>Expand the <b>Workbench</b> category and select <b>Fonts</b>.</li>
+  <li>Select the font you want to change.</li>
+  <li>Click the <b>Change</b> push button.</li>
+  <li>Use the dialog which opens to select a font.</li>
+  <li>Click <b>OK</b>.</li>
+</ol>
+
+<p>Note: You can also click the <b>Use System Font</b> button to set the font 
+  to a reasonable value chosen by the platform. For example, on Windows this will 
+  use the font selected in the Display Properties control panel.</p>
+
+<p>Plugins which use other fonts may also provide preference entries to allow them to
+be customized. For example, the Java Development Tools provide a setting for controlling
+the font used by the Java editor (<b>Java &gt; Editor &gt; Appearance &gt; Text font</b>).
+</p>
+
+<p>In addition to the above, some text is always displayed in the system font. For example, 
+the navigator tree always does this. To change the font used in these areas, you can use the
+configuration tools provided by the system (eg. the Display Properties control panel on
+Windows, or the .Xdefaults file in Motif).
+</p>
+
+<h2>Colors</h2>
+
+<p>To set the colors used by the Workbench to display error text and hyperlink text:
+</p>
+<ol>
+  <li>On the main menu bar, click <b>Window &gt; Preferences</b>.</li>
+  <li>Expand the <b>Workbench</b> category and select <b>Appearance</b>.</li>
+  <li>Select the color you want to change.</li>
+  <li>Use the dialog which opens to select a color.</li>
+  <li>Click <b>OK</b>.</li>
+</ol>
+
+<p>Plugins which use other colors may also provide preference entries to allow them to
+be customized. For example, the searching support provides a setting for controlling
+the color used to display inexact matches (<b>Workbench &gt; Search &gt; Foreground
+color for inexact matches</b>).
+</p>
+
+<p>In general, the Workbench uses the colors that are chosen by the operating 
+  system. To change these colors you can use the configuration tools provided 
+  by the system (eg. the Display Properties control panel on Windows, or the .Xdefaults 
+  file in Motif). </p>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/accessibility/fontsandcolors.htm">Fonts and Colors in Eclipse</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
+
+</BODY>
+</HTML>
