--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68bg.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68bg.htm
@@ -17,7 +17,7 @@ indicate the differences between the files.</p>
 <p CLASS="Head">You can double
 click on the editor tab to maximize the editor.&nbsp;</p>
 <p CLASS="Head">
-<img align="texttop" border="0" src="../images/Image80_compare_editor2.jpg"  alt="Compare view">&nbsp;&nbsp;</p>
+<img align="texttop" border="0" src="../images/Image80_compare_editor2.jpg"  alt="Compare view" width="533" height="181">&nbsp;&nbsp;</p>
 <p CLASS="Head">
 Looking at the numbered changes:</p>
 <ul>
@@ -58,7 +58,7 @@ Looking at the numbered changes:</p>
 <a href="tasks-101.htm">Comparing resources with repository versions</a><br>
 <a href="tasks-3g.htm">Tiling editors</a></p>
 <p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
 </p>
 
 </BODY>
