--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68dg.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68dg.htm
@@ -1,62 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Merging changes in the Compare editor</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Merging changes in the Compare&nbsp; editor</H1>
-<p>The toolbar buttons in the Compare editor allow you to merge changes from the left file to the
-right file and vice versa. There are four types of merges you can perform:</p>
-<ul>
-  <li>Copy whole document from left to right</li>
-  <li>Copy whole document from right to left</li>
-  <li>Copy current change from left to right</li>
-  <li>Copy current change from right to left</li>
-</ul>
-<p>
-The <b>Copy Whole Document</b> actions completely replace the contents of the other
-file.</p>
-<p>
-To merge a single change:</p>
-<ol>
-  <li>Select the highlighted difference that you want to merge.</li>
-  <li>Depending on what you want to do, click either the <b>Copy current change from right to left</b> 
-    or the <b>Copy 
-  current change from left to right</b> toolbar button. The selected text is 
-  copied from one file to the other.</li>
-  <li>Close the comparison editor and
-        choose <b>Yes</b> to save the changes. (You can also save changes by selecting <b>Save</b> from the resource's pop-up menu.)</li>
-</ol>
-<p CLASS="Head">The image below gives an example of two files file1.txt and 
-file2.txt compared </p>
-<p>
-<img align="texttop" border="0" src="../images/Image80_compare_editor.jpg" alt=" Compare view" width="532" height="181"></p>
-
-
-<P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-31.htm">Comparison editors</a><br>
-<a href="../concepts/concepts-29.htm">Three-way comparisons</a><br>
-<a href="../concepts/concepts-30b.htm">Synchronize view</a><br>
-<a href="../concepts/concepts-30.htm">Team synchronization</a>
-</P>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks"><br>
-<a href="tasks-68.htm">Comparing resources</a><br>
-<a href="tasks-68bg.htm">Understanding the comparison</a><br>
-<a href="tasks-115.htm">Synchronizing with a stream</a><br>
-<a href="tasks-113b.htm">Resolving conflicts and merging changes</a><br>
-<a href="tasks-68b.htm">Setting preferences for comparing files</a>
-</p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Merging changes in the Compare editor</title></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Merging changes in the Compare editor</H1><p>The toolbar buttons in the Compare editor allow you to merge changes from the left file to theright file and vice versa. There are four types of merges you can perform:</p><ul>  <li>Copy All from Left to Right</li>  <li>Copy All from Right to Left</li>  <li>Copy Current Change from Left to Right</li>  <li>Copy Current Change from Right to Left</li></ul><p>The <b>Copy All from Left to Right</b> and <b>Copy All from Right to Left</b>actions completely replace the contents of one resource with the other resource.</p><p>To merge a single change:</p><ol>  <li>Select the highlighted difference that you want to merge.</li>  <li>Depending on what you want to do, click either the <b>Copy Current Change     from Right to Left</b> or the <b>Copy Current Change from Left to Right</b>     toolbar button. The selected text is copied from one file to the other.</li>  <li>Right click to get the resource's pop-up menu, and select <b>Save</b>.</li></ol><p>The image below gives an example of two files file1.txt and file2.txt compared.</p><p><img align="texttop" border="0" src="../images/Image80_compare_editor.jpg" alt="Compare view" width="532" height="181"></p><P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-31.htm">Comparison editors</a><br><a href="../concepts/concepts-29.htm">Three-way comparisons</a><br><a href="../concepts/concepts-30b.htm">CVS Synchronize view</a><br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a></P><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks"><br><a href="tasks-68.htm">Comparing resources</a><br><a href="tasks-68bg.htm">Understanding the comparison</a><br><a href="tasks-115.htm">Synchronizing with the repository</a><br><a href="tasks-113b.htm">Resolving conflicts</a><br><a href="tasks-68b.htm">Setting preferences for comparing files</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
