--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68bg.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68bg.htm
@@ -1,65 +1,2 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Understanding the comparison</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Understanding the comparison</H1>
-<p CLASS="Head">If you compare two files (file1.txt and file2.txt), the following results
- are shown in the compare editor. The left side shows the contents of file1.txt and the right side
-shows the contents of file2.txt. The lines connecting the left and right panes
-indicate the differences between the files.</p>
-<p CLASS="Head">You can double
-click on the editor tab to maximize the editor.&nbsp;</p>
-<p CLASS="Head">
-<img align="texttop" border="0" src="../images/Image80_compare_editor2.jpg"  alt="Compare view" width="533" height="181">&nbsp;&nbsp;</p>
-<p CLASS="Head">
-Looking at the numbered changes:</p>
-<ul>
-  <li>
-    <p CLASS="Head">Starting with the top line (in the the left pane) we can see
-    that the difference bar
-    (in the area of the blue circle) indicates something is missing from
-    the very top of the left file. If we follow the difference band (see #1) to
-    the right file we can see that the it contains &quot;This is line 1&quot; .</li>
-  <li>
-    <p CLASS="Head">The next line &quot;This is line 2.&quot; is white
-    indicating it matches the right file.</li>
-  <li>
-    <p CLASS="Head">Moving onto the next line (colored in gray) we can see that
-    the left file and right file have different contents for this line (see #2).</li>
-  <li>
-    <p CLASS="Head">The next line (&quot;This is line 4&quot;) is once again in white, so we
-    can skip it.</li>
-  <li>
-    <p CLASS="Head">The next line exists in the left file&nbsp; but since it is
-    gray we follow its difference bar to the right (see #3) and notice that the
-    right file does not contain the line (see red circle).</li>
-</ul>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-31.htm">Comparison editors</a><br>
-<a href="../concepts/concepts-30.htm">Team synchronization</a><br>
-<a href="../concepts/concepts-29.htm">Three-way comparisons</a><br>
-<a href="../concepts/concepts-30b.htm">Synchronize view</a><br>
-<a href="../concepts/concepts-17a.htm">Local history</a></p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-68.htm">Comparing resources</a><br>
-<a href="tasks-115.htm">Synchronizing with a stream</a><br>
-<a href="tasks-68dg.htm">Merging changes in the comparison editor</a><br>
-<a href="tasks-113b.htm">Resolving conflicts and merging changes</a><br>
-<a href="tasks-68b.htm">Setting preferences for comparing files</a><br>
-<a href="tasks-101.htm">Comparing resources with repository versions</a><br>
-<a href="tasks-3g.htm">Tiling editors</a></p>
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Understanding the comparison</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Understanding the comparison</H1><p>If you compare two files (file1.txt and file2.txt), the following resultsare shown in the compare editor. The left side shows the contents of file1.txt and the right sideshows the contents of file2.txt. The lines connecting the left and right panesindicate the differences between the files.</p><p>You can double click on the editor tab to maximize the editor.</p><p><img align="texttop" border="0" src="../images/Image80_compare_editor2.jpg"  alt="Compare view" width="533" height="181"></p><p>Looking at the numbered changes in the above image:</p><ul>  <li>Starting with the top line (in the the left pane) we can see that the difference     bar (in the area of the blue circle) indicates something is missing from the     very top of the left file. If we follow the difference band (see #1) to the     right file we can see that it contains &quot;This is line 1&quot; .</li>  <li>The next line &quot;This is line 2.&quot; is white indicating it matches     the right file.</li>  <li>Moving onto the next line (colored in gray) we can see that the left file     and right file have different contents for this line (see #2).</li>  <li>The next line (&quot;This is line 4&quot;) is once again in white, so we    can skip it, since the contents are the same in both.</li>  <li>The next line exists in the left file&nbsp; but since it is gray we follow     its difference bar to the right (see #3) and notice that the right file does     not contain the line (see red circle).</li></ul><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-31.htm">Comparison editors</a><br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a><br><a href="../concepts/concepts-29.htm">Three-way comparisons</a><br><a href="../concepts/concepts-30b.htm">CVS Synchronize view</a><br><a href="../concepts/concepts-17a.htm">Local history</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-68.htm">Comparing resources</a><br><a href="tasks-115.htm">Synchronizing with the repository</a><br><a href="tasks-68dg.htm">Merging changes in the Compare editor</a><br><a href="tasks-113b.htm">Resolving conflicts</a><br><a href="tasks-68b.htm">Setting preferences for comparing files</a><br><a href="tasks-101.htm">Comparing resources with repository versions</a><br><a href="tasks-3g.htm">Tiling editors</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
+</p></BODY></HTML>
