--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02a.htm
@@ -27,7 +27,7 @@ might want to take a moment to peruse the welcome page. It provides a quick
 starting point if you are eager to customize your workbench or learn about other
 installed features.
 </P>
-<P CLASS="Para"><img align="texttop" border="0" src="../images/image1.jpg" width="643" height="496"></P>
+<P CLASS="Para"><img align="texttop" border="0" src="../images/image1.jpg" width="643" height="496" alt="Workbench"></P>
 
 
 <P><a href="qs-02b.htm">
