--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02b.htm
@@ -45,10 +45,10 @@ information based on the last active editor.&nbsp;&nbsp;<br>
 <p CLASS="Intro">If you click on the Navigator view you will notice it becomes
 active.
 </p>
-<p CLASS="Intro"><img align="texttop" border="0" src="../images/Image2-activeview.jpg" width="643" height="496"></p>
+<p CLASS="Intro"><img align="texttop" border="0" src="../images/Image2-activeview.jpg" width="643" height="496" alt="Workbench"></p>
 <P CLASS="Intro">Clicking on the welcome page (editor) you can see that the
 editor's tab turns blue, and the Navigator's title bar is no longer blue. The
-welcome page is now our active editor.<P CLASS="Intro"><img align="texttop" border="0" src="../images/Image2-activeeditor.jpg" width="643" height="496"><P>
+welcome page is now our active editor.<P CLASS="Intro"><img align="texttop" border="0" src="../images/Image2-activeeditor.jpg" width="643" height="496" alt="Welcome page selected"><P>
 <a href="qs-02d.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
 Editors</a>
