Added text for Tag with Existing

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-118.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-118.htm
@@ -29,6 +29,13 @@ Versioning projects in the repository</H1>
   on the <b>Details</b> button in the Tag Resources dialog. Clicking <b>Refresh 
   from Repository</b> should populate the Existing Versions list. It is sometimes 
   helpful to see existing versions before naming your new version.</p>
+<p><b>Tip</b>:&nbsp; If the version tag you wish to apply already exists on some of the resources
+to be versioned, you can perform a <b>Tag with Existing...</b> instead. This operation will move an existing
+tag to the selected resources and can be used to move both version and branch tags. 
+If the tag you wish to apply is not show in the list, you can click <b>Refresh 
+  from Repository</b>. If this doesn't find the tag, you can click <b>Configure Tags...</b>
+which opens a dialog that allows you to search for tags on specific files in the repository.
+</p>
 <p></p>
 
 
