Converted all references of concepts-27v to ref-32 (CVS Repositories view)  - deleted concepts-27v  - removed CVS views from topics_Concepts.xml

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-92.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-92.htm
@@ -59,14 +59,18 @@ To create a new repository location:</P>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
 <br><a href="../concepts/concepts-26.htm">Team programming with CVS</a>
 <br><a href="../concepts/concepts-27c.htm">CVS Repositories</a>
-<br><a href="../concepts/concepts-27v.htm">CVS Repositories view</a></p>
-
+</p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
 <br><a href="tasks-94.htm">Discarding a CVS repository location</a>
 <br><a href="tasks-93.htm">Refreshing the repository view</a>
 <br><a href="tasks-96.htm">Checking out a project from a CVS repository</a>
 <br><a href="tasks-110.htm">Discovering branch and version tags</a>
+</p>
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
+<br><a href="../reference/ref-47.htm">CVS</a>
+<br><a href="../reference/ref-32.htm">CVS Repositories view</a>
 </p>
 
 <p>&nbsp;<br>
