--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-93.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-93.htm
@@ -23,12 +23,16 @@ Press F5 on the keyboard</LI>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
 <br><a href="../concepts/concepts-26.htm">Team programming with CVS</a>
 <br><a href="../concepts/concepts-27c.htm">CVS Repositories</a>
-<br><a href="../concepts/concepts-27v.htm">CVS Repositories view</a>
-
+</p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
 <br><a href="tasks-92.htm">Creating a CVS repository location</a>
 <br><a href="tasks-94.htm">Discarding a CVS repository location</a>
+</p>
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
+<br><a href="../reference/ref-47.htm">CVS</a>
+<br><a href="../reference/ref-32.htm">CVS Repositories view</a>
 </p>
 
 <p>&nbsp;<br>
