--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-96.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-96.htm
@@ -56,22 +56,25 @@
 </ol>
 <p><b>Tip</b>: Any folder, including non-root folders, can be checked out from 
   a CVS repository. </p>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27c.htm"><br>
-Repositories</a><a href="../concepts/concepts-27v.htm"><br>
-Repositories view</a></p>
+  
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<br><a href="../concepts/concepts-26.htm">Team programming with CVS</a>
+<br><a href="../concepts/concepts-27c.htm">CVS Repositories</a>
+</p>
 
 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-Creating a repository location</a><a href="tasks-103.htm"><br>
-Replacing resources with a repository
-        version</a><a href="tasks-111.htm"><br>
-Creating a new stream</a><a href="tasks-117.htm"><br>
-Associating a project with a stream</a><a href="tasks-100a.htm"><br>
-Splitting from a stream</a><a href="tasks-115.htm"><br>
-Synchronizing with a stream</a><a href="tasks-113.htm"><br>
-Catching up</a><a href="tasks-114.htm"><br>
-Releasing resources to the stream</a>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+<br><a href="tasks-96a.htm">Checking out a module from a CVS repository</a>
+<br><a href="tasks-92.htm">Creating a CVS repository location</a>
+<br><a href="tasks-103.htm">Replacing resources in the workbench</a>
+<br><a href="tasks-110.htm">Discovering branch and version tags</a>
+<br><a href="tasks-117.htm">Sharing a new project using CVS</a>
+<br><a href="tasks-115.htm">Synchronizing with the repository</a>
+</p>
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
+<br><a href="../reference/ref-47.htm">CVS</a>
+<br><a href="../reference/ref-32.htm">CVS Repositories view</a>
 </p>
 
 <p>&nbsp;<br>
