Converted all references of concepts-30b to ref-33 (CVS Synchronizeview)  - deleted concepts-30b

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
@@ -76,6 +76,10 @@
  href="../tasks/tasks-101.htm"><br>
    Comparing resources with repository versions</a> </p>
        
+<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
+<br><a href="../reference/ref-33.htm">CVS Synchronize view</a>
+</p>
+
 <p class="Para"> <a href="../hglegal2002.htm"><img
  src="../images/ngibmcpy2002.gif"
  alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved."
