--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-31.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-31.htm
@@ -25,8 +25,8 @@ example, all of the lines are highlighted because none of them match.) </P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/Image234_cmp_another.jpg" alt="Picture of two edit panes, side by side, with all lines of text highlighted." width="548" height="268"> </P>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="concepts-30b.htm">CVS Synchronize view<br>
-</a><a href="concepts-29.htm">Three-way comparisons</a></p>
+<a href="concepts-29.htm">Three-way comparisons</a>
+</p>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-92.htm"><br>
@@ -37,6 +37,10 @@ Synchronizing with the repository<br>
 </a><a href="../tasks/tasks-113b.htm">
 Resolving conflicts</a><a href="../tasks/tasks-68b.htm"><br>
 Setting preferences for comparing files</a>
+</p>
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
+<br><a href="../reference/ref-33.htm">CVS Synchronize view</a>
 </p>
 
 
