--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-115.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-115.htm
@@ -57,7 +57,6 @@
 <a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
 <a href="../concepts/concepts-27b.htm">Branches</a><br>
 <a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a><br>
-<a href="../concepts/concepts-30b.htm">CVS Synchronize view</a><br>
 <a href="../concepts/concepts-29.htm">Three-way comparisons</a></p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
@@ -68,7 +67,12 @@
 <a href="tasks-68dg.htm">Merging changes in the Compare editor</a><br>
 <a href="tasks-100b.htm">Merging from a branch</a><br>
 <a href="tasks-100d.htm">Version control life cycle: adding and ignoring resources</a><br>
-<a href="tasks-103.htm">Replacing resources with a repository version</a><br>
+<a href="tasks-103.htm">Replacing resources in the workbench</a><br>
+</p>
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
+<br><a href="../reference/ref-47.htm">CVS</a>
+<br><a href="../reference/ref-33.htm">CVS Synchronize view</a>
 </p>
 
 <p>&nbsp;<br>
