--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-113.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-113.htm
@@ -70,10 +70,8 @@
 
 <p CLASS="Intro"><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
   <a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
-  <a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a><br>
-  <a href="../concepts/concepts-30b.htm">CVS Synchronize view</a>
+  <a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
   </p>
-
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-114.htm">Committing</a><br>
@@ -81,7 +79,12 @@
 <a href="tasks-68.htm">Comparing resources</a><br>
 <a href="tasks-100d.htm">Version control life cycle: adding and ignoring resources</a>
 </p>
- 
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
+<br><a href="../reference/ref-47.htm">CVS</a>
+<br><a href="../reference/ref-33.htm">CVS Synchronize view</a>
+</p>
+
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
 </p>
