--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68.htm
@@ -60,21 +60,24 @@ members and changing the default font.</p>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-31.htm">Comparison editors</a><br>
-<a href="../concepts/concepts-30.htm">Team synchronization</a><br>
+<a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a><br>
 <a href="../concepts/concepts-29.htm">Three-way comparisons</a><br>
-<a href="../concepts/concepts-30b.htm">Synchronize view</a><br>
 <a href="../concepts/concepts-17a.htm">Local history</a></p>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-115.htm">Synchronizing with a stream</a><br>
-<a href="tasks-68dg.htm">Merging changes in the comparison editor</a><br>
-<a href="tasks-113b.htm">Resolving conflicts and merging changes</a><br>
+<a href="tasks-115.htm">Synchronizing with the repository</a><br>
+<a href="tasks-68dg.htm">Merging changes in the compare editor</a><br>
+<a href="tasks-113b.htm">Resolving conflicts</a><br>
 <a href="tasks-68b.htm">Setting preferences for comparing files</a><br>
 <a href="tasks-101.htm">Comparing resources with repository versions</a><br>
 <a href="tasks-68bg.htm">Understanding the comparison</a><br>
 <a href="tasks-68c.htm">Working with patches</a><br>
 <a href="tasks-3g.htm">Tiling editors</a></p>
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
+<br><a href="../reference/ref-33.htm">CVS Synchronize view</a>
+</p>
 
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
