Converted all references of concepts-31to ref-25 (Compare Editor)  - deleted concepts-31  - removed compare editor from topics_Concepts

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-113b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-113b.htm
@@ -90,7 +90,6 @@ with the other two choices.</P>
 <P>&nbsp;<img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
 <a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a><br>
-<a href="../concepts/concepts-31.htm">Comparison editors<br>
 </a><a href="../concepts/concepts-29.htm">Three-way comparisons</a>
 </P>
 
@@ -107,6 +106,7 @@ with the other two choices.</P>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
 <a href="http://www.cvshome.org/docs/manual/cvs_10.html#SEC85" target="_blank">www.cvshome.org: Bringing a file up to date</a><br>
 <a href="http://www.cvshome.org/docs/manual/cvs_10.html#SEC86" target="_blank">www.cvshome.org: Conflicts example</a>
+<br><a href="../reference/ref-25.htm">Compare editor</a>
 </p>
 
 </BODY>
