--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68.htm
@@ -59,11 +59,9 @@ members and changing the default font.</p>
 
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-31.htm">Comparison editors</a><br>
 <a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a><br>
 <a href="../concepts/concepts-29.htm">Three-way comparisons</a><br>
 <a href="../concepts/concepts-17a.htm">Local history</a></p>
-
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-115.htm">Synchronizing with the repository</a><br>
@@ -76,6 +74,7 @@ members and changing the default font.</p>
 <a href="tasks-3g.htm">Tiling editors</a></p>
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
+<br><a href="../reference/ref-25.htm">Compare editor</a>
 <br><a href="../reference/ref-33.htm">CVS Synchronize view</a>
 </p>
 
