--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-101.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-101.htm
@@ -40,7 +40,6 @@ Comparing resources with repository versions</H1>
 </ol>
 
 <P CLASS="Intro"><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-  <a href="../concepts/concepts-31.htm">Comparison editors</a><br>
   <a href="../concepts/concepts-29.htm">Three-way comparisons</a><br>
  <a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
 <p>
@@ -48,6 +47,11 @@ Comparing resources with repository versions</H1>
 <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-115.htm">Synchronizing with the repository</a><br>
 <a href="tasks-68b.htm">Setting preferences for comparing files</a><br>
+</p>
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
+<br><a href="../reference/ref-47.htm">CVS</a>
+<br><a href="../reference/ref-25.htm">Compare editor</a>
 </p>
 
 <p>&nbsp;<br>
