--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-57.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-57.htm
@@ -1,41 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Exporting resources from the workbench</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Exporting resources from the workbench </H1>
-<p CLASS="Para">You can export files from the workbench in three ways:</p>
-<ul>
-  <li>
-    <p CLASS="Para">By using the Export wizard</li>
-  <li>
-    <p CLASS="Para"><img src="../images/ngwin.gif" alt="For Windows:" width="49" height="13"> By
-    dragging files or folders from the Navigator view to the file system</li>
-  <li>
-    <p CLASS="Para"><img src="../images/ngwin.gif" alt="For Windows:" width="49" height="13"> By
-    copying files or folders from Navigator view and pasting them into the file
-    system</li>
-</ul>
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-12.htm">Resources</a></p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-53.htm"><br>
-Importing resources into the workbench</a><a href="tasks-57.htm"><br>
-</a><a href="tasks-59.htm">Exporting resources to the file system</a><a href="tasks-59ag.htm"><br>
-Exporting to a ZIP File</a><a href="tasks-59j.htm"><br>
-Exporting resources to a JAR file</a></p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Exporting</title></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Exporting</H1><p>You can export files from the workbench in three ways:</p><ul>  <li>By using the Export wizard</li>  <li><img src="../images/ngwin.gif" alt="For Windows:" width="49" height="13"> By    dragging files or folders from the Navigator view to the file system</li>  <li><img src="../images/ngwin.gif" alt="For Windows:" width="49" height="13"> By    copying files or folders from Navigator view and pasting them into the file    system</li></ul><p>See the related tasks section for more details.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-12.htm">Resources</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-59.htm">Exporting resources to the file system</a><br><a href="tasks-59ag.htm">Exporting resources to a ZIP File</a><br><a href="tasks-59j.htm">Exporting resources to a JAR file</a><br><a href="tasks-53.htm">Importing</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
