--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-59.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-59.htm
@@ -1,48 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Exporting resources to the file system</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head"> Exporting resources to the file system</H1>
-
-<P CLASS="Para">
-You can use the Export wizard to export resources from the workbench to the file system.</P>
-<ol>
-  <li>In the Navigator view, select the resources that you want to export.</li>
-  <li>From the main menu bar, select <b>File &gt; Export</b>. The Export wizard
-    opens.</li>
-  <li>Select <b>File System</b> and click <b>Next</b>.</li>
-  <li>Click the <b>Browse</b> button on the next page of the wizard, to select
-    the directories from which you would like to add the resources.</li>
-  <li>By default, the resources that you selected will be exported, along with
-    all their children. Optionally, use the checkboxes in the left and right
-    panes to select the set of resources to export, and use push buttons such as
-    <b>Select Types</b> to filter the types of files that you want to export.</li>
-  <li>Specify the directory in the file system that will be the export
-    destination.</li>
-  <li>When you have finished specifying export options. click <b>Finish.</b></li>
-</ol>
-<p>&nbsp;<b>Tip</b>: You can also export folders and files by dragging them from
-the Navigator view to the file system and dropping them in the file system, or
-by copy and paste.</p>
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-12.htm">Resources</a></p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-53.htm"><br>
-Importing resources into the workbench</a><a href="tasks-55.htm"><br>
-</a><a href="tasks-59ag.htm">Exporting to a ZIP File</a><a href="tasks-59j.htm"><br>
-Exporting resources to a JAR file</a></p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Exporting resources to the file system</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Exporting resources to the file system</H1><P>You can use the Export wizard to export resources from the workbench to the file system.</P><ol>  <li>In the Navigator view, select the resources that you want to export.</li>  <li>From the main menu bar, select <b>File &gt; Export</b>. The Export wizard opens.</li>  <li>Select <b>File System</b> and click <b>Next</b>.</li>  <li>By default, the resources that you selected will be exported, along with    all their children. Optionally, use the checkboxes in the left and right    panes to select the set of resources to export, and use push buttons such as    <b>Select Types</b> to filter the types of files that you want to export.</li>  <li>Click the <b>Browse</b> button on the next page of the wizard, to select    the directory you would like to export the resources to.</li>  <li>Specify the directory in the file system that will be the export destination.</li>  <li>Click <b>Finish</b>.</li></ol><p><em>Tip:</em> You can also export folders and files by dragging them fromthe Navigator view to the file system and dropping them in the file system, orby copy and paste.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-12.htm">Resources</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-53.htm">Importing resources into the workbench</a><br><a href="tasks-59ag.htm">Exporting resources to a ZIP File</a><br><a href="tasks-59j.htm">Exporting resources to a JAR file</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
