--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-75.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-75.htm
@@ -1,47 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Performing builds manually</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<h1>
-Performing builds manually</h1>
-<P CLASS="Para">By default, builds are performed automatically when you save
-resources. If you need more control over when builds occur, you can disable automatic building and manually invoke builds. This is sometimes desirable in cases where you know building should wait until you finish a large set of changes.
-The disadvantage of manual building is that tasks generated to indicate build errors quickly become out of date until you build. In addition, it is very important that you remember to manually build before relying on build
-output (for example, before running your Java program).&nbsp; </P>
-<p>
-<b>Note</b>: Some of the menu items described below are only available when 
-the automatic build preference is disabled in the workbench preferences (select <b>Window &gt;
-Preferences</b> &gt; <b>Workbench</b>).</p>
-<p CLASS="Para">To build only selected projects:</p>
-<ol>
-  <li>In the Navigator view of the Resource perspective, select one or 
-more projects.
-  </li>
-  <li>
-Right-click and select the option <b>Rebuild Project</b> from the pop-up menu.
-  </li>
-</ol>
-<p>To build all projects in the workspace:</p>
-<ul>
-  <li>Click <b>Project &gt; Rebuild Project</b> for an incremental build (rebuilds only modified resources).</li>
-  <li>Click <b>Project &gt; Rebuild All </b>for a full build.</li>
-</ul>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-22.htm"><br>
-Builds</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-17.htm">Saving resources automatically before a manual build</a><br>
-<a href="tasks-14.htm">Changing build order</a><a href="tasks-73.htm"><br>
-</a><a href="tasks-16.htm">Performing builds automatically</a></p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Performing builds manually</title></HEAD><BODY BGCOLOR="#ffffff"><h1>Performing builds manually</h1><P>By default, builds are performed automatically when you save resources. If   you need more control over when builds occur, you can disable automatic building   and manually invoke builds. This is sometimes desirable in cases where you know   building should wait until you finish a large set of changes. The disadvantage   of manual building is that tasks generated to indicate build errors quickly   become out of date until you build. In addition, it is very important that you   remember to manually build before relying on build output (for example, before   running your Java program).</P><p><em>Note:</em> Some of the menu items described below are only available when the automatic build preference is disabled in the workbench preferences (select <b>Window &gt; Preferences</b> &gt; <b>Workbench</b>).</p><p>To build only selected projects:</p><ol>  <li>In the Navigator view of the Resource perspective, select one or more projects.</li>  <li>Right-click and select the option <b>Rebuild Project</b> from the pop-up menu.</li></ol><p>To build all projects in the workspace click <b>Project &gt; Rebuild All</b>. Note that, this will rebuild all resources, even the ones which have not been modified.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-22.htm">Builds</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-17.htm">Saving resources automatically before a manual build</a><br><a href="tasks-14.htm">Changing build order</a><br><a href="tasks-16.htm">Performing builds automatically</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
