--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-16.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-16.htm
@@ -1,53 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Performing builds automatically</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Performing builds automatically</H1>
-<P CLASS="Para">
-To indicate that you want the workbench to perform incremental builds whenever
-resources are saved:</P>
-<ol>
-  <li>
-<P CLASS="Para">
-Click <b>Window</b> &gt; <b>Preferences</b>.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Select the <b>Workbench</b> category in the left pane. The Workbench Preferences 
-page opens.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-Select the <b>Perform build automatically on resource modification</b> check 
-box. </P>
-  </li>
-  <li>
-<P CLASS="Para">
-Click <b>OK</b> to close the Preferences page. The workbench will automatically 
-perform incremental builds of resources modified since the last build. 
-Whenever a resource is modified, another incremental build occurs.  </P>
-  </li>
-</ol>
-
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-22.htm"><br>
-Builds</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-73.htm"><br>
-</a>
-<a href="tasks-75.htm">Performing builds manually<br>
-</a><a href="tasks-14.htm">
-Changing build order</a></p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Performing builds automatically</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Performing builds automatically</H1><P>To indicate that you want the workbench to perform incremental builds wheneverresources are saved:</P><ol>  <li>Click <b>Window</b> &gt; <b>Preferences</b>.</P>  </li>  <li>Select the <b>Workbench</b> category in the left pane. The Workbench Preferences     page opens.</li>  <li>Select the <b>Perform build automatically on resource modification</b> check box.</li>  <li>Click <b>OK</b> to close the Preferences page. The workbench will automatically     perform incremental builds of resources modified since the last build. Whenever     a resource is modified, another incremental build occurs.</li></ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-22.htm">Builds</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-75.htm">Performing builds manually</a><br><a href="tasks-14.htm">Changing build order</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
