--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-59ag.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-59ag.htm
@@ -1,43 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Exporting resources to a ZIP file</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-
-<h1>Exporting resources to a ZIP file</h1>
-<p CLASS="Para">You can use the Export wizard to export resources from the
-workbench to a ZIP file in the file system.</p>
-<ol>
-  <li>In the Navigator view, select the resources that you want to export.</li>
-  <li>From the main menu bar, select <b>File &gt; Export</b>. The Export wizard
-    opens.</li>
-  <li>Select <b>Zip file</b> and click <b>Next</b>.</li>
-  <li>Click the <b>Browse</b> button on the next page of the wizard, to select
-    the directories from which you would like to add the resources.</li>
-  <li>By default, the resources that you selected will be exported along with their children. Optionally, use the checkboxes in the left and right
-    panes to select the set of resources to export, and use push buttons such as
-    <b>Select Types</b> to filter the types of files that you want to export.</li>
-  <li>Specify the name of the destination ZIP file.</li>
-  <li>When you have finished specifying export options. click <b>Finish.</b></li>
-</ol>
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-12.htm">Resources</a></p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-53.htm"><br>
-Importing resources into the workbench</a><a href="tasks-57.htm"><br>
-</a><a href="tasks-59.htm">Exporting resources to the file system</a><a href="tasks-59ag.htm"><br>
-</a><a href="tasks-59j.htm">Exporting resources to a JAR file</a></p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Exporting resources to a ZIP file</title></HEAD><BODY BGCOLOR="#ffffff"><h1>Exporting resources to a ZIP file</h1><p>You can use the Export wizard to export resources from the workbench to a ZIP file in the file system.</p><ol>  <li>In the Navigator view, select the resources that you want to export.</li>  <li>From the main menu bar, select <b>File &gt; Export</b>. The Export wizard opens.</li>  <li>Select <b>Zip file</b> and click <b>Next</b>.</li>  <li>By default, the resources that you selected will be exported along with     their children. Optionally, use the checkboxes in the left and right panes     to select the set of resources to export, and use push buttons such as <b>Select     Types</b> to filter the types of files that you want to export.</li>  <li>Specify the path and name of the ZIP file into which you want to export    the selected resources.</li>  <li>Click <b>Finish.</b></li></ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-12.htm">Resources</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-59.htm">Exporting resources to the file system</a><br><a href="tasks-59j.htm">Exporting resources to a JAR file</a><br><a href="tasks-53.htm">Importing</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
