--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-63cg.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-63cg.htm
@@ -1,53 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Copying resources</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Copying resources</H1>
-<P CLASS="Para">
-You can copy resources from one workbench location to another (for example, from one project to another
-project).</P>
-<ol>
-  <li>
-    <p CLASS="Para">
-In the Navigator view, select the resources that you want to copy.</li>
-  <li>
-    <p CLASS="Para">From the pop-up menu, select <b>Copy</b>.</li>
-  <li>
-    <p CLASS="Para">In the Folder Selection window, select the project or folder where you want to
-copy the resources and click <b>OK</b>.</li>
-</ol>
-<P><b>Tip</b>: You can also copy resources by holding down the Ctrl key and
-dragging them from the original location to the new location in the Navigator
-view. A horizontal line will appear to show you where the resource will be moved to. 
-You must drag the resource to the exact location where you want it moved.
-</P>
-
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/cnav.htm"><br>
-</a><a href="../concepts/concepts-12.htm">Resources
-</a><a href="../concepts/cnav.htm"><br>
-Navigator view</a></p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-42.htm">
-Creating a project</a><a href="tasks-43.htm"><br>
-Creating a folder</a><a href="tasks-44.htm"><br>
-Creating a file</a><a href="tasks-46ag.htm"><br>
-</a><a href="tasks-63.htm">Moving resources</a><a href="tasks-66.htm"><br>
-Renaming resources</a><a href="tasks-67.htm"><br>
-Deleting resources</a></p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Copying resources</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Copying resources</H1><P>You can copy resources from one workbench location to another (for example,   from one project to another project).</P><ol>  <li>In the Navigator view, select the resources that you want to copy.</li>  <li>From the pop-up menu, select <b>Copy</b>.</li>  <li>In the Navigator view, select the project or folder where you want to copy     the resources and click <b>OK</b>.</li></ol><P><em>Tip:</em> You can also copy resources by holding down the Ctrl key anddragging them from the original location to the new location in the Navigatorview.</P><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-12.htm">Resources</a><br><a href="../concepts/cnav.htm">Navigator view</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-42.htm">Creating a project</a><br><a href="tasks-43.htm">Creating a folder</a><br><a href="tasks-44.htm">Creating a file</a><br><a href="tasks-63.htm">Moving resources</a><br><a href="tasks-66.htm">Renaming resources</a><br><a href="tasks-67.htm">Deleting resources</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
