--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-67.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-67.htm
@@ -1,43 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Deleting resources</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Deleting resources</H1>
-<p CLASS="Para">To delete a resource from the workbench:</p>
-<ol>
-  <li>
-    <p CLASS="Para">In the Navigator view, select the resources that you want to
-    rename. (Hold down the Ctrl key to select more than one resource.)</li>
-  <li>
-    <p CLASS="Para">Press the Delete key.</li>
-</ol>
-<p CLASS="Para">You could achieve the same result by selecting <b>Delete</b>
-from the pop-up menu.</p>
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/cnav.htm"><br>
-</a><a href="../concepts/concepts-12.htm">Resources
-</a><a href="../concepts/cnav.htm"><br>
-Navigator view</a></p>
-
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-42.htm"><br>
-Creating a project</a><a href="tasks-43.htm"><br>
-Creating a folder</a><a href="tasks-44.htm"><br>
-Creating a file</a><a href="tasks-63cg.htm"><br>
-Copying resources</a><a href="tasks-63.htm"><br>
-Moving resources</a><a href="tasks-66.htm"><br>
-Renaming resources</a></p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Deleting resources</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Deleting resources</H1><p>To delete a resource from the workbench:</p><ol>  <li>In the Navigator view, select the resources that you want to    delete. (Hold down the Ctrl key to select more than one resource.)</li>  <li>Press the Delete key.</li>  <li>Click <b>Yes</b> in the dialog which appears.</li></ol><p><em>Tip:</em> You could achieve the same result by selecting <b>Delete</b>from the pop-up menu.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-12.htm">Resources</a><br><a href="../concepts/cnav.htm">Navigator view</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-42b.htm">Deleting projects</a><br><a href="tasks-42.htm">Creating a project</a><br><a href="tasks-43.htm">Creating a folder</a><br><a href="tasks-44.htm">Creating a file</a><br><a href="tasks-63cg.htm">Copying resources</a><br><a href="tasks-63.htm">Moving resources</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
