--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-88.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-88.htm
@@ -1,58 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Setting local history preferences</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Setting local history preferences</H1>
-<p CLASS="Para">To indicate the level of local history that should be kept for 
-each resource in the workbench:</p>
-<ol>
-  <li>
-<p CLASS="Para">Click <b>Workbench</b> &gt; <b>Preferences</b>. </p>
-  </li>
-  <li>
-<p CLASS="Para">Select the <b>Workbench</b> &gt; <b>Local History</b> category in 
-the left pane. The Local History Preferences page opens.</p>
-  </li>
-  <li>
-<P CLASS="Para">
-In the <b>Days To Keep Files</b> field, type the number of days that you want to keep  records for
-any one workbench resource.
-For example, if you type 7, then a history of saved states from the last seven
-days will be kept.</P>
-  </li>
-  <li>
-<p CLASS="Para">In the <b>Entries Per File</b> field, type the number of
-        states to keep for any one workbench resource.&nbsp;
-Note that when you exceed the number&nbsp;of entries per file, the oldest changes are discarded to make room for the newer changes.</p>
-  </li>
-  <li>
-<p CLASS="Para">In the <b>Maximum File Size (MB)</b> field, type the maximum file size (in MB) of a
-resource for which a local history should be kept.&nbsp;&nbsp;If the size of the resource exceeds the maximum amount of
-file size allocated, no local history is kept for that resource.</p>
-  </li>
-  <li>
-<p CLASS="Para">Click <b>OK</b> to set your preferences and close the Local 
-History Preferences page.</p>
-  </li>
-</ol>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-17a.htm"><br>
-Local history</a><a href="../concepts/concepts-27.htm"><br>
-Resource versions</a><a href="../concepts/concepts-12.htm"><br>
-Resources</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-87.htm"><br>
-Replacing a resource with local history</a><a href="tasks-70.htm"><br>
-Comparing resources with local history</a></p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Setting local history preferences</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Setting local history preferences</H1><p>To indicate the level of local history that should be kept for each resource in the workbench:</p><ol>  <li>Click <b>Window &gt; Preferences</b>.</li>  <li>Select the <b>Workbench</b> &gt; <b>Local History</b> category in the left     pane. The Local History Preferences page opens.</li>  <li>In the <b>Days to keep files</b> field, type the number of days that you     want to keep records for any one workbench resource. For example, if you type     7, then a history of saved states from the last seven days will be kept.</li>  <li>In the <b>Entries per file</b> field, type the number of states to keep     for any one workbench resource. Note that when you exceed the number of     entries per file, the oldest changes are discarded to make room for the newer     changes.</li>  <li>In the <b>Maximum file size (MB)</b> field, type the maximum file size (in     MB) of a resource for which a local history should be kept. If     the size of the resource exceeds the maximum amount of file size allocated,     no local history is kept for that resource.</li>  <li>Click <b>OK</b> to set your preferences and close the Local History Preferences page.</li></ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-17a.htm">Local history</a><br><a href="../concepts/concepts-27.htm">Versions</a><br><a href="../concepts/concepts-12.htm">Resources</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-87.htm">Replacing a resource with local history</a><br><a href="tasks-70.htm">Comparing resources with the local history</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
