--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
@@ -1,66 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Running Ant build files in the workbench</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Running Ant build files</H1>
-<p CLASS="Para">To run an Ant script in the workbench:</p>
-<ol>
-  <li>
-<p CLASS="Para">In the Navigator view, select an XML file.</p>
-  </li>
-  <li>
-<p CLASS="Para">From the file's pop-up menu, select <b>Run Ant</b>. If the 
-selected XML file is a valid script, the Ant wizard opens. </p>
-  </li>
-  <li>
-<p CLASS="Para">Select one or more targets from the <b>Available targets</b> list. 
-The order in which you select the items 
-is the order in which they will run. The order is indicated by the number in square 
-brackets to the left of the target.</p>
-  </li>
-  <li>
-<p CLASS="Para">(Optional) Type any required arguments in the <b>Arguments</b> 
-field.</p>
-  </li>
-  <li>
-<p CLASS="Para">If you want output from the script to display in a console in 
-the workbench, select <b>Show execution log in console</b>. </p>
-  </li>
-  <li>
-<p CLASS="Para">Click <b>Finish</b>. </p>
-  </li>
-</ol>
-<p>The Ant script will run on the selected targets. If you selected the 
-option, the Log Console displays any applicable execution results 
-after the script runs.</p>
-<p>Once a script is run through the Ant wizard, it is automatically configured as an external tool.
-In order to change the configuration or rerun the script, go to the <b>Run &gt; External Tools</b> menu.
-</p>
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/cantsup.htm">Ant support</a><br>
-<a href="../concepts/concepts-22.htm">Builds</a><br>
-<a href="../concepts/cexttools.htm">External tools</a>
-</p>
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="../tasks/tasks-90.htm">Running external tools</a><br>
-<a href="../tasks/tasks-85.htm">Modifying the Ant classpath</a><br>
-<a href="../tasks/tasks-86.htm">Using a different version of Ant</a><br>
-<a href="../tasks/tasks-83.htm">Adding new tasks and types</a><br>
-</p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm">
-<img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Running Ant build files</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Running Ant build files</H1><p>To run an Ant script in the workbench:</p><ol>  <li>In the Navigator view, select an XML file.</li>  <li>From the file's pop-up menu, select <b>Run Ant</b>. If the selected XML     file is a valid Ant script, the Ant wizard opens.</li>  <li>Select one or more targets from the <b>Available targets</b> list. The order     in which you select the items is the order in which they will run. The order     is indicated by the number in square brackets to the left of the target.</li>  <li>(Optional) Type any required arguments in the <b>Arguments</b> field.</li>  <li>If you want output from the script to display in a console in the workbench,     select <b>Show execution log in console</b>.</li>  <li>Click <b>Finish</b>.</li></ol><p>The Ant script will run on the selected targets. If you selected the option, the Log Console displays any applicable execution results after the script runs.</p><p>Once a script is run through the Ant wizard, it is automatically configured as an external tool. In order to change the configuration or rerun the script, go to the <b>Run &gt; External Tools</b> menu.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/cantsup.htm">Ant support</a><br><a href="../concepts/concepts-22.htm">Builds</a><br><a href="../concepts/cexttools.htm">External tools</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="../tasks/tasks-90.htm">Running external tools</a><br><a href="../tasks/tasks-85.htm">Modifying the Ant classpath</a><br><a href="../tasks/tasks-86.htm">Using a different version of Ant</a><br><a href="../tasks/tasks-83.htm">Adding new tasks and types</a><br></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a></p></BODY></HTML>
