*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/team_provider_hooks.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_provider_hooks.htm
@@ -16,8 +16,8 @@ occurs as the user works with resources in the project that is configured for
 the provider.&nbsp; In order to be aware of changes the user makes to a
 resource, the provider can implement <a href="resAdv_hooks.htm">resource
 modification hooks</a>.&nbsp; The resources plug-in provides these hooks as
-extension points.&nbsp; The documentation for <a href="../reference/api/org/eclipse/core/resources/IMoveDeleteHook.html">IMoveDeleteHook</a>
-and <a href="../reference/api/org/eclipse/core/resources/IFileModificationValidator.html">IFileModificationValidator</a>
+extension points.&nbsp; The documentation for <a href="../reference/api/org/eclipse/core/resources/team/IMoveDeleteHook.html"><b>IMoveDeleteHook</b></a>
+and <a href="../reference/api/org/eclipse/core/resources/IFileModificationValidator.html"><b>IFileModificationValidator</b></a>
 describe the details for implementing these hooks.</P>
 <P >The team plug-in optimizes and simplifies the association of the hook with
 appropriate resources by registering generic hooks with the resources
@@ -30,7 +30,7 @@ overriding methods in <font color="#4444CC"><b><a href="../reference/api/org/ecl
 </font>The default implementation of these methods answers null, indicating that
 no hook is necessary.</P>
 <ul>
-  <li><b>getMoveDeleteHook</b> - answers an <a href="../reference/api/org/eclipse/core/resources/IMoveDeleteHook.html">IMoveDeleteHook</a>
+  <li><b>getMoveDeleteHook</b> - answers an <a href="../reference/api/org/eclipse/core/resources/team/IMoveDeleteHook.html"><b>IMoveDeleteHook</b></a>
     appropriate for the provider.&nbsp; This hook allows providers to control
     how moves and deletes occur and includes the ability to prevent them from
     happening.&nbsp; Implementors can provide alternate implementations for
@@ -38,7 +38,7 @@ no hook is necessary.</P>
     this hook to monitor folder deletions and ensure that any files contained in
     deleted folders are remembered so that they can later be deleted from the
     repository if desired.</li>
-  <li><b>getFileModificationValidator</b> - answers an <a href="../reference/api/org/eclipse/core/resources/IFileModificationValidator.html">IFileModificationValidator</a>
+  <li><b>getFileModificationValidator</b> - answers an <a href="../reference/api/org/eclipse/core/resources/IFileModificationValidator.html"><b>IFileModificationValidator</b></a>
     appropriate for the provider.&nbsp; This hook allows providers to pre-check
     any modifications or saves to files.&nbsp; This hook is typically needed
     when a repository provider wants to implement <b>pessimistic versioning</b>.&nbsp;
