Converted references to ref-49 to concepts-29 (3 way compare)  - deleted ref-49.htm

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
@@ -44,18 +44,17 @@
   <li class="Item"> what has been changed in the second child in comparison to 
     the common ancestor.</li>
 </ul>
-<p class="Para"> <img align="top" border="0"
- src="../images/Image271_compare3.jpg"
- alt=" Picture of comparison editor. Top pane compares project structure; second pane from top shows a source file; below that 2 other panes show 2 other source files. Discrepancies are highlighted.">
-   </p>
-     
-<p class="Para"> The common ancestor is displayed in the top pane of the text 
-  compare pane (hidden in the above picture).&nbsp; The differences that you see 
+
+<p class="Para"> In the picture below, the common ancestor is displayed in the top pane of the text 
+  compare pane.&nbsp; The differences that you see 
   highlighted are what has changed in the workbench resource as compared to the 
   common ancestor, and what has been changed in the branch resource as compared 
   to the common ancestor. The sections that differ in all three files are highlighted 
   as differences.&nbsp;Conflicts are shown in red, incoming changes in gray, and 
   outgoing changes in blue. </p>
+  
+<p class="Para"> <img align="texttop" border="0" src="../images/Image49_3_way_compare.jpg" alt="Synchronize View with 3 way compare" >
+   </p>
        
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts"
  width="159" height="27">
